k8s/java-service.yml
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  selector:
    app: java-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
